--- a/src/LeaveDayAPI.Domain.Shared/Localization/LeaveDayAPI/vi.json
+++ b/src/LeaveDayAPI.Domain.Shared/Localization/LeaveDayAPI/vi.json
@@ -14,6 +14,7 @@
     "LeaveRequest:InValidDate": "Thiết lập ngày không hợp lệ, ngày bắt đầu phải là ngày sau hôm nay và không được lớn hơn ngày kết thúc",
     "LeaveRequest:NotFound": "Không thể cập nhật yêu cầu đã được phê duyệt",
     "LeaveRequest:ApproveError": "Yêu cầu đã bị từ chối trước đó, không thể phê duyệt lại",
-    "LeaveRequest:NotEnoughRemainingDay": "Số ngày nghỉ yêu cầu vượt quá mức hiện có, bạn chỉ còn {0} ngày"
+    "LeaveRequest:NotEnoughRemainingDay": "Số ngày nghỉ yêu cầu vượt quá mức hiện có, bạn chỉ còn {0} ngày",
+    "LeaveReques:InvalidRequest": "Yêu cầu phê duyệt không chuẩn xác, vui lòng thử lại",
   }
 }
